<resources>
    <string name="app_name">Smart Attendance System</string>
    <string name="todo">TODO</string>
    <string name="student_name">STUDENT NAME</string>
    <string name="student_id">STUDENT ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_a_member_get_registered_now">Not a member get registered now</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="password">password</string>
    <string name="registration">Registration</string>
    <string name="already_registered_login_me">Already Registered. Login Me</string>
    <string name="forgot_password_lvl">Forgot Password</string>
    <string name="just_enter_registered_email_id_to_sent_you_password_reset_instructions">Just enter registered Email Id to sent you password reset instructions.</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="back"><![CDATA[<< BACK]]></string>
    <string name="report">Report</string>
    <string name="report_back"><![CDATA[<<]]></string>
    <string name="date_wise_attendance_report">Date wise Attendance Report</string>
    <string name="sign_out">Sign Out</string>
</resources>
